--- a/preamble.tex
+++ b/preamble.tex
@@ -1203,3 +1203,35 @@
 
 
 
+% ----------------------------------------------------------------LAMBREGS
+
+
+
+\newcommand{\kader}[1]{\framebox{\begin{minipage}[t]{0.98\textwidth}#1\end{minipage}}}
+\newcommand{\voorbeeld}[2]{\begin{tabular}[t]{p{0.98\textwidth}}\textsf{Voorbeeld: #1}\\\hline\end{tabular}\ \newline\newline#2\ \newline \begin{tabular}[t]{p{0.98\textwidth}}\hline\\\end{tabular}}
+
+%\setlength{\parindent}{0pt} \addtolength{\voffset}{-1cm} \addtolength{\textheight}{2cm}
+%\setlength{\unitlength}{1mm}
+
+%\setlength{\parskip}{1em}
+
+
+% \newcommand{\dom}[1]{{\rm dom}\,#1}
+% \newcommand{\ber}[1]{{\rm ber}\,#1}
+% \newcommand{\bgsin}[1]{{\rm bgsin}\,#1}
+% \newcommand{\bgcos}[1]{{\rm bgcos}\,#1}
+% \newcommand{\bgtan}[1]{{\rm bgtan}\,#1}
+
+\newcommand*\cleartoleftpage{%
+  \clearpage
+  \ifodd\value{page}\hbox{}\newpage\fi
+}
+
+\theoremstyle{plain}\newtheorem{eigenschap}{Eigenschap}\newtheorem{definitie}{Definitie}
+%\theoremstyle{remark}\newtheorem*{bewijs}{Bewijs}
+
+% Om de oplossingen te tonen: comment out de \excludecomment
+\specialcomment{oplossing}{\begingroup\color{blue}}{\endgroup}
+\excludecomment{oplossing}
+
+%\includeonly{F_Files/voorblad, F_Files/inhoudspagina,F_Files/inleiding,F_Files/eendimensionalebewegingen,F_Files/oefeningen_1d}
