--- a/lambregs_ximera/ae_behoud.tex
+++ b/lambregs_ximera/ae_behoud.tex
@@ -14,8 +14,8 @@
 
 	Het arbeid-energietheorema relateert de geleverde arbeid door een resulterende kracht met de toename aan kinetische energie. Het zegt dat de hoeveelheid geleverde arbeid door de resulterende kracht volledig wordt gebruikt voor de toename van kinetische energie.
 	Anderzijds als met de resulterende kracht een potenti\"ele energie kan worden geassocieerd, dan is de geleverde arbeid afkomstig van het verlies in potenti\"ele energie. De energie die dus onder de vorm van potenti\"ele energie verloren gaat wordt in kine\-ti\-sche energie gewonnen. En dit zodanig dat de som van beide energi\"en - de totale mechanische energie - constant blijft.
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	Uit $W=\Delta E_k$ en $W=-\Delta E_p$ volgt:
 	\begin{eqnarray}
 	\Delta E_k&=&-\Delta E_p\nonumber\\
@@ -36,6 +36,6 @@
 	Het principe van behoud van energie is een van de meest fundamentele principes in de fysica \ldots 
 	
 	%\clearpage
-	%\newpage
+	%%%\newpage
 	
 \end{document}
