--- a/lambregs_ximera/ae_pot_elastische.tex
+++ b/lambregs_ximera/ae_pot_elastische.tex
@@ -21,7 +21,7 @@
 	%defini\"eren. In namelijk niet alle gevallen is de mogelijk te
 	%leveren hoeveelheid arbeid eenduidig bepaald.
 	
-	%\newpage
+	%%%\newpage
 	
 	\subsection{Elastische potenti\"ele energie}\label{elastische
 	potentiele energie}
@@ -32,7 +32,10 @@
 	\includegraphics[width=0.8\textwidth ,angle=0]{elastische_energie}
 	\end{center}
 	\end{figure}
-	\newline
+
+
+	%%%\newline
+
 	Hier vonden we dat de hoeveelheid arbeid door de veerkracht geleverd
 	bij een verplaatsing van $x_a$ naar $x_b$ gegeven wordt door:
 	\begin{eqnarray*}
