--- a/lambregs_ximera/ae_pot_potentiële_energie.tex
+++ b/lambregs_ximera/ae_pot_potentiële_energie.tex
@@ -45,7 +45,7 @@
 	Ga na dat de energiefuncties die we bij de drie voorbeelden (\ref{gravitationele potentiele energie}), (\ref{elastische potentiele energie}) en (\ref{gravitationele potentiele energie
 	alg}) vonden, voldoen aan deze definitie en dus potenti\"ele energiefuncties zijn.
 	
-	%\newpage
+	%%%\newpage
 	
 	
 	
