--- a/lambregs_ximera/grvt_universele_gravitatiekracht.tex
+++ b/lambregs_ximera/grvt_universele_gravitatiekracht.tex
@@ -51,7 +51,7 @@
 	
 	Newton bepaalde de constante $G$ niet zelf. Dat werd na zijn dood door Cavendish (1731 - 1810) gedaan.
 	
-	\newpage
+	%%\newpage
 	
 	
 	
