--- a/lambregs_ximera/hrmn_harmonische_oscillator.tex
+++ b/lambregs_ximera/hrmn_harmonische_oscillator.tex
@@ -94,7 +94,7 @@
 	%\centering
 	%\includegraphics[width=.7\textwidth]{ht_fase}
 	%\end{figure}
-	%\newline
+	%%%%\newline
 	De beginfase bepaalt dan ook de beginpositie. Zo is bijvoorbeeld de functie maximaal wanneer het argument $\pi/2$ is, wat betekent dat de massa op haar maximale uitwijking is. Is dus de beginfase gelijk aan $\pi/2$, dan begint de trilling vanuit haar maximale uitwijking. Een beginfase van $3\pi/2$ komt overeen met een minimale waarde bij het begin. In figuur \ref{beginposbeginfase} zie je verschillende mogelijkheden voor de beginfase, hier weergegeven als $\varphi_0$.
 	
 	Nu dat we de positie in functie van de tijd kennen, vinden we door af te leiden de snelheid en de versnelling van de massa. 
@@ -105,7 +105,7 @@
 	\end{eqnarray*}
 	Merk op dat de versnelling op een constante ($\omega^2$) na tegengesteld is aan de positie. Dat is niet verwonderlijk aangezien we te maken hebben met de wet van Hooke en volgens de tweede wet van Newton de versnelling recht evenredig is met de kracht. 
 	
-	\newpage
+	%%\newpage
 	
 	\begin{figure}
 		\centering
@@ -118,7 +118,7 @@
 	\end{figure}
 	
 	\clearpage
-	\newpage
+	%%\newpage
 	
 	Naast in detail de beweging te hebben bestudeerd, kunnen we ook naar het energieverloop kijken. Hiertoe vullen we gewoonweg de positie en de snelheid in de formules voor energie in.
 	\begin{eqnarray*}
@@ -136,7 +136,7 @@
 	\end{figure}
 	Merk op dat de energie van een trilling recht evenredig is met het kwadraat van de amplitude. Een golf in de zee die dus twee keer zo hoog is, draagt vier keer zoveel energie met zich mee. In de figuur zie je mooi hoe de kinetische en de potenti\"ele energie in elkaar worden omgezet; het verlies van de ene is de winst van de andere. Let op het verschil tussen de periode van de energievormen en de periode van de eigenlijke trilling \ldots
 	
-	%\newpage
+	%%%\newpage
 	
 
 \end{document}
