--- a/lambregs_ximera/hrmn_inleiding.tex
+++ b/lambregs_ximera/hrmn_inleiding.tex
@@ -8,7 +8,7 @@
 	\xmtitle{Inleiding}{}
 
 
-	\chapter*{Inleiding}
+	% \chapter*{Inleiding}
 
 	Er zijn legio voorbeelden waarin trillingen en golven voorkomen. Als inleiding zullen we er hier een niet onaardige kort aanstippen. Aanschouw de volgende wonderbaarlijke vergelijkingen \ldots
 	\begin{eqnarray*}
@@ -36,14 +36,14 @@
 	\emph{This velocity is so nearly that of light, that it seems we have strong reasons to conclude that light itself [\ldots] is an electromagnetic disturbance in the form of waves propagated through the electromagnetic field according to electromagnetic laws.}
 	\end{quotation}
 	Het ongelofelijk knappe hiervan is dat die wetten hun oorsprong vinden in verschijnselen die daar op het eerste zicht niets mee te maken hebben: het aantrekken en afstoten van ladingen, magneten en stromen. Deze verschijnselen zijn in de eeuwen daarvoor onderzocht en door verschillende grote fysici in wetmatigheden gegoten om vervolgens, als bijkomende consequenties, ook licht, radiogolven, gsm-straling en alle andere golven binnen het elektromagnetische spectrum te kunnen beschrijven. Dat is binnen de fysica alweer een staaltje van unificatie!
-	%\newline
-	%\newline
+	%%%%\newline
+	%%%%\newline
 	%Zo zien we dat golven fundamentele natuurverschijnselen zijn. De moeite om te bestuderen dus\ldots 
-	%\newline
-	%\newline
+	%%%%\newline
+	%%%%\newline
 	%- E induceert B en omgekeerd
 	%- nabla uitschrijven
 	
-	\newpage
+	%%\newpage
 	
 \end{document}
