--- a/lambregs_ximera/hrmn_mathematische_slinger.tex
+++ b/lambregs_ximera/hrmn_mathematische_slinger.tex
@@ -18,7 +18,7 @@
 	Stel dat we te maken hebben met een slinger van lengte $l$ die bovenaan bevestigd is en waaraan een massa $m$ hangt. De wrijving laten we buiten beschouwing. We beschouwen ook een model waarin het touw geen massa heeft.\footnote{Moesten we dit wel in rekening brengen, dan zouden we het model de fysische slinger noemen.} De positie van de slinger kunnen we aangeven d.m.v. de booglengte, gemeten vanaf de evenwichtspositie tot aan de massa. De hoek die het touw met de verticale maakt, is een mogelijk alternatief. 
 	
 	Om de beweging te kunnen vinden d.m.v. de tweede wet van Newton, maken we een krachtendiagram. We voeren een assenstelsel rakend aan de baan van het voorwerp in. De richting rakend aan de baan noemen de tangenti\"ele richting, die loodrecht op de baan noemen we de normale richting. Natuurlijk kunnen we ook altijd voor een $x$-as en een $y$-as opteren.
-	\newline
+	%%%\newline
 	\begin{wrapfigure}[11]{r}{0.33\textwidth}
 	%\centering
 	\includegraphics[width=0.34\textwidth]{pendulum}
@@ -48,7 +48,7 @@
 	% \phantom{}
 	% \includegraphics[width=\textwidth]{sinx_x}
 	% \end{minipage}
-	\newline
+	
 	De differentiaalvergelijking wordt er dan een heel pak gemakkelijker op:
 	\begin{eqnarray*}
 	\frac{d^2s}{dt^2}+g\sin\left(\frac{s}{l}\right)&=&0\\
@@ -66,7 +66,7 @@
 	T=2\pi\sqrt{\frac{l}{g}},\quad f=\frac{1}{2\pi}\sqrt{\frac{g}{l}}
 	\end{eqnarray*}
 	
-	\newpage
+	%%\newpage
 	
 	
 
