--- a/lambregs_ximera/hrmn_relatie_cirkelbeweging.tex
+++ b/lambregs_ximera/hrmn_relatie_cirkelbeweging.tex
@@ -22,7 +22,7 @@
 	
 	De plaatsvector die het punt op de cirkel beschrijft noemen we ook wel een \emph{fasor} -- een samenvoegsel van fase en vector. Met een fasor kunnen de fase van een trilling visualiseren, het faseverschil tussen trillingen visualiseren en kunnen we gemakkelijker trillingen samenstellen. 
 	
-	%\newpage
+	%%%\newpage
 	
 
 \end{document}
