--- a/lambregs_ximera/knmtc_1dim_begrippen.tex
+++ b/lambregs_ximera/knmtc_1dim_begrippen.tex
@@ -40,7 +40,7 @@
 	\Delta x = x_2-x_1
 	\]
 	Zo is de verplaatsing van de auto in de figuur tussen de tijdstippen $t_0$ en $t_1$ gelijk aan $\Delta x = x_1-x_0=50\rm\,m-30\rm\,m=20\rm\,m$ en is de verplaatsing tussen de tijdstippen $t_2$ en $t_4$ gelijk aan $\Delta x=x_4-x_2=-40\rm\,m-40\rm\,m=-80\rm\,m$. Deze laatste verplaatsing is negatief, wat aangeeft dat de auto netto naar achteren is bewogen -- tegengesteld aan de zin van de gekozen as.
-	\newline
+	%%%\newline
 	Let op, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. Als je op caf\'e na naar het toilet te zijn geweest terug op je oorspronkelijke plaats op het terras gaat zitten, is je (netto) verplaatsing nul maar heb je wel degelijk afstand afgelegd.
 	
 	\subsection{Gemiddelde snelheid}
