--- a/lambregs_ximera/knmtc_1dim_verticale_worp.tex
+++ b/lambregs_ximera/knmtc_1dim_verticale_worp.tex
@@ -21,7 +21,7 @@
 	Omdat de verticale worp een EVRB is, kunnen we de formules (\ref{x(t)0}) en (\ref{v(t)0}) gebruiken om een valbeweging te beschrijven. Voor de versnelling $a$ nemen we dan $a=g$ of $a=-g$ al naargelang de ori\"entatie van de co\"ordinaatas.
 	
 	\clearpage
-	\newpage
+	%%\newpage
 	
 	
 	\begin{enumerate}
@@ -30,7 +30,7 @@
 	\item Hoe diep is het water?
 	\item Wat is de gemiddelde snelheid van de bol over het hele traject?
 	\end{enumerate}
-	\item[\textit{gegeven}]$x_1=4,0\rm\,m$\newline$t_2=6,0\rm\,s$
+	\item[\textit{gegeven}]$x_1=4,0\rm\,m$%%%\newline$t_2=6,0\rm\,s$
 	\item[\textit{gevraagd}]$x_2-x_1$, $\overline{v}_{02}$
 	\item[\textit{oplossing}]De beweging is opgebouwd uit twee verschillende soorten bewegingen. Het eerste stuk is een vrije val, wat een EVRB is. In het tweede stuk (onder water) is de snelheid constant en is er dus geen versnelling. In geen geval kunnen we dus de formules voor een EVRB op het geheel toepassen. Die zijn immers afgeleid voor een beweging waar de versnelling (altijd, gedurende de hele beweging) constant is.
 	\begin{figure}[h]
