--- a/lambregs_ximera/knmtx_2dim_eenparige_cirkelbeweging.tex
+++ b/lambregs_ximera/knmtx_2dim_eenparige_cirkelbeweging.tex
@@ -61,9 +61,9 @@
 	%\includegraphics[width=0.4\textwidth]{snelheidsvector}
 	%\caption{De snelheidsvector is te ontbinden in componenten}
 	%\end{figure}
-	%\newline
+	%%%%\newline
 	
-	\newpage
+	%%\newpage
 	
 	\begin{eigenschap}
 	De snelheidsvector is rakend aan de baan.
@@ -94,7 +94,7 @@
 	\caption{De versnelling raakt niet noodzakelijk aan de baan}
 	\end{figure}
 	
-	\newpage
+	%%\newpage
 	
 	%oefening baanvergelijking, enz.
 	
@@ -142,7 +142,7 @@
 	\end{enumerate}}
 	\end{enumerate}
 	
-	\newpage
+	%%\newpage
 	
 	
 
