--- a/lambregs_ximera/knmtx_2dim_horizontale_worp.tex
+++ b/lambregs_ximera/knmtx_2dim_horizontale_worp.tex
@@ -18,7 +18,7 @@
 	\includegraphics[width=0.6\textwidth]{horizontaleworp_tekening}
 	\caption{De snelheid in horizontale richting verandert niet, die in de verticale richting neemt lineair toe in de tijd}
 	\end{figure}
-	\newline
+	%%%\newline
 	In de beschrijving kunnen we de $x$-as horizontaal en de $y$-as verticaal naar beneden nemen. Omdat er volgens de $x$-as geen versnelling is het lichaam volgens de $y$-as valt met de valversnelling $g$, kunnen we de formules voor een ERB en een EVRB (Zie (\ref{x(t)0}) en (\ref{v(t)0})) op de afzonderlijke assen toepassen en zo de volledige beweging beschrijven.%\footnote{Strikt genomen zoeken we hier nog niet naar een verklaring (die voor de horizontale beweging in de wet van de traagheid zit) maar beschrijven we enkel de beweging. Waarom de versnelling nul en $g$ is, vragen we ons dus zogezegd nog even niet af.}.
 	\begin{equation*}
 	\left\{
@@ -49,7 +49,7 @@
 	\end{eqnarray*}
 	De baan is dus een parabool.
 	
-	\newpage
+	%%\newpage
 	
 	%oefening horizontale worp
 	
@@ -60,7 +60,7 @@
 	om op het doel terecht te komen?
 	\item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
 	\end{enumerate}
-	\item[\textit{gegeven}]$v_0=125\rm\,m/s$\newline$y=920\rm\,m$
+	\item[\textit{gegeven}]$v_0=125\rm\,m/s$%%%\newline$y=920\rm\,m$
 	\item[\textit{gevraagd}]$x$, $t$
 	\item[\textit{oplossing}]De afstand waarover de voedselpakketten in
 	horizontale richting zijn vooruit gegaan, kunnen we vinden met de
@@ -82,6 +82,6 @@
 	\end{enumerate}
 	
 	\cleardoublepage
-	\newpage
+	%%\newpage
 	
 \end{document}
