--- a/lambregs_ximera/nwtn_historische_uitwijding.tex
+++ b/lambregs_ximera/nwtn_historische_uitwijding.tex
@@ -15,8 +15,8 @@
 
 	Galileo schreef in 1632 een dialoog waarin hij de juistheid van het copernicaanse wereldbeeld fysisch probeerde te bewijzen door middel van de socratische methode\footnote{Van Dale: waarbij men de denkbeelden uit de geest van de leerling zelf ontwikkelt, terwijl men hem door gepaste vragen allengs zo ver brengt, dat hij het begrip, dat men hem duidelijk wil maken, zelf vindt.}. Een van de tegenargumenten was dat een vallende steen niet volgens een loodlijn op het aardoppervlak zou neerkomen, wanneer de aarde zelf een rotatie uitvoerde.\footnote{De aarde zou immers onder de steen wegdraaien.} Galileo haalde dit argument onderuit door gebruik te maken van het traagheidsbeginsel (anderen hadden dit ook geprobeerd via een 'slepende invloed' van de lucht, maar Galileo zag in dat dat niet voldoende was en erkent de ware fysische grondslag).
 	De dialoog gaat tussen drie geleerden. Sagredo is de vriend van een niet nader genoemd auteur (Galileo), die zijn gesprekspartners inlicht over diens nieuwe theori\"en. Salviati is de onbevooroordeelde geleerde die vooral zijn gezond verstand gebruikt, en dus de positie van de lezer verbeeldt. Simplicio is de wat simplistische schoolgeleerde (scholasticus), die het standpunt van Aristoteles weergeeft.
-	%\newline
-	%\newline
+	%%%%\newline
+	%%%%\newline
 	Hier een fragment uit deze dialoog.
 	
 	\vfill
@@ -76,15 +76,15 @@
 	
 	}
 	
-	\newpage
+	%%\newpage
 	
 	Het traagheidsbeginsel had bij Galilei nog geen universele status. Het ging slechts om een eigenschap van bewegingen van zware lichamen op een concentrische baan omheen het middelpunt van de aarde.
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	Hier een fragment uit Descartes' natuurkundeleerboek \textit{Principia Philoso\-phiae} (uitgegeven bij Elzevier te Leiden, 1644).
 	Descartes was een rationalist, d.w.z. dat hij de fundamentele natuurwetten baseerde op helder en `onbetwijfelbare' idee\"en in zijn geest, of bijvoorbeeld in de afwezigheid van redenen om iets anders aan te nemen. (`Waarom zou God ons misleiden door ons verkeerde idee\"en te laten denken?'). Descartes gaat iets verder dan Galilei, bij hem is het beginsel een algemene natuurwet, die niet enkel beperkt is tot zware voorwerpen onder invloed van de zwaartekracht, maar die inherent is aan het verschijnsel beweging.
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	
 	{\footnotesize
 	
@@ -103,8 +103,8 @@
 	
 	De vruchtbaarheid van het traagheidsbeginsel komt pas goed tot uiting in het werk van Christiaan Huygens (1629-1695). Voor Huygens is het beginsel een algemeen aanvaard axioma waaruit de relativiteit van inerti\"ele stelsels kan afgeleid worden. Huygens ziet hierin een middel om de wetten van elastische botsing af te leiden, wat rond het midden van de zeventiende eeuw een nog helemaal onopgelost probleem
 	was. Descartes had met zijn traagheidsbeginsel een aantal botsingswetten geformuleerd die echter duidelijk fout waren, o.a. omdat de verschillende regels bij grensgevallen niet in elkaar overgingen. Huygens werkte op dit probleem vermoedelijk al in 1656, maar publiceerde pas in 1669 een kort verslag van zijn resultaten in de \textit{Philosophical Transactions} -- zonder enig bewijs. Pas na zijn dood werd het hele traktaat in zijn postuum \textit{Opuscula varia} (Leiden, 1703) openbaar gemaakt. Het geldt nog steeds als \'e\'en der mooiste teksten van de vroege fysica. De volgende tekst is de aanvang van het traktaat.
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	{\footnotesize
 	
 	\begin{enumerate}
@@ -123,7 +123,7 @@
 	 elkaar botsen, dragen zij op elkaar, ook als ze samen in nog een andere gemeenschappelijke,
 	eenparige beweging meegevoerd worden, slechts dezelfde impuls over als in het geval de
 	gemeenschappelijke beweging niet aanwezig was.
-	\newline
+	%%%\newline
 	Zo stellen wij bijvoorbeeld dat wanneer iemand, die op een schip zit dat met een eenparige
 	snelheid vaart, twee gelijke kogels met gelijke snelheid op elkaar laat botsen -- let wel met
 	betrekking tot zichzelf en de delen van het schip -- dat beide ook met gelijke snelheid zullen
@@ -133,92 +133,101 @@
 	
 	}
 	
-	\newpage
+	%%\newpage
 	
 	De tekst van Huygens werd zoals gezegd pas in 1703 bekend. In 1687 had Isaac Newton (1642-1727) intussen zijn `klassieke' formulering van de traagheidswet gegeven in \textit{Philosophiae Naturalis Principia Mathematica} (De wiskundige beginselen der natuurkunde, 1687). Maar is die formulering wel zo klassiek?
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	\textbf{Tekst 4}
 	{\footnotesize
 	\begin{enumerate}
 	\item[Definitie III] De \textit{vis insita} of inherente kracht van de materie, is het vermogen om te weerstaan, waardoor elk lichaam, voor zover het kan, zijn huidige toestand tracht te behouden, of het nu in rust is, of in uniforme, rechtlijnige beweging.
-	\newline
+	%%%\newline
 	Deze kracht is steeds evenredig met het lichaam waartoe ze behoort en verschilt in niets van de
 	inactiviteit [inertie] van de massa, maar zoals wij die opvatten. Een lichaam zal omwille van de
 	inertie van de materie, niet gemakkelijk uit zijn rusttoestand worden gebracht. Daarom mag de \textit{vis
 	insita} ook zeer toepasselijk inertie- [\textit{vis inertiae}] of inactiviteitskracht worden genoemd. Maar een lichaam kan enkel deze kracht uitoefenen wanneer een andere kracht op het lichaam wordt uitgeoefend die tracht haar toestand te veranderen. De werking van de inertiekracht kan zowel weerstand als impuls worden genoemd; `weerstand' als het lichaam dat zijn toestand wil behouden, zich verzet tegen een uitwendige kracht; `impuls' wanneer het lichaam, door weerstand biedt aan de uitwendige kracht van een ander lichaam, tracht de toestand van het andere lichaam te veranderen. Weerstand wordt gewoonlijk gebruikt voor lichamen in rust en impuls voor lichamen in beweging; maar beweging en rust, zoals ze gewoonlijk worden opgevat, zijn slechts relatief onderscheiden. En evenmin zijn die lichamen die gewoonlijk als in rust worden beschouwd, ook werkelijk in rust. [...]
 	
 	\item[Wet I] Elk lichaam blijft in de toestand van rust of gelijkvormige rechtlijnige beweging, tenzij het gedwongen wordt die toestand te veranderen door krachten die erop worden uitgeoefend.
-	\newline
+	%%%\newline
 	Projectielen vervolgen hun beweging, in zover zij niet vertraagd worden door de weerstand van de lucht, of naar beneden gehaald worden door de zwaartekracht. Een tol, waarvan de delen door hun cohesie voortdurend van de rechtlijnige beweging worden afgebogen, zal zijn rotatie niet stopzetten, tenzij door de weerstand van de lucht. De grotere lichamen van planeten en kometen, die minder weerstand ontmoeten in vrije ruimtes, behouden hun bewegingen zowel rechtlijnig als cirkelvormig voor een veel langere tijd.
 	
 	\end{enumerate}
 	}
 	
 	
-	\newpage
+	%%\newpage
 	
 	\textbf{Vragen}
-	
-	\begin{enumerate}
-	\item Simplicio vertegenwoordigt in de tekst het standpunt van de scholastieke geleerden. Duid aan hoe Galilei hen portretteert.
+	\begin{exercise}
+    \begin{question}  Simplicio vertegenwoordigt in de tekst het standpunt van de scholastieke geleerden. Duid aan hoe Galilei hen portretteert.
 	\begin{oplossing}
-	\newline
+	%%%\newline
 	Galilei portretteert hen als geleerden die de voor die tijd gangbare wetenschappelijke idee\"en aanhangen. 
-	\newline
+	%%%\newline
 	Een van die idee\"en is het bewijs van het niet-roteren van de aarde. Omdat een steen aan de voet van een toren neervalt kan de aarde niet bewegen. Moest de aarde bewegen, dan zou immers tijdens het vallen de aarde onder de steen zijn verschoven en zou de steen op enige afstand van de toren terecht moeten komen. Galilei laat Simplicio deze misvatting bevestigen aan het begin van de dialoog waardoor Simplicio dus een scholastieke geleerde vertolkt.
-	\newline
+	%%%\newline
 	Ook het niet uitvoeren van experimenten als toetssteen van wetenschappelijke theorie\"en is eigen aan de tijdsgeest op dat moment. Het louter menselijk redeneren en de autoriteit van voorgangers wordt als nodig en voldoende beschouwd om een ware kijk op de werkelijkheid te kunnen hebben. Galilei laat bovenaan pagina 34 Simplicio dit idee beamen wanneer Salviati het beschrijft.
-	\newline
+	%%%\newline
 	Naast de twee hierboven genoemde misvattingen die de scholastieke geleerden volgens Galilei hebben, schetst hij hen wel als redelijke wezens. Zij beschikken over voldoende intellect om de eigenlijke waarheid wel te kennen. Anders zou hij immers niet via de socratische methode en dus ook het redeneren hen tot de juiste conclusie kunnen leiden. Aan het einde van de dialoog is het immers Simplicio die de juiste wetmatigheid (in de ogen van Galilei) geeft.
 	\end{oplossing}
+	\end{question}
 	
-	\item Wat is de rol van het experiment bij Galilei?
+    \begin{question}  Wat is de rol van het experiment bij Galilei?
 	\begin{oplossing}
-	\newline
+	%%%\newline
 	Het experiment moet volgens Galilei dienen als rechter om te bepalen welke wetmatigheden de eigenlijke zijn. Simplicio zegt immers bovenaan pagina 34 dat zonder het experiment de eigenlijke uitkomst niet zomaar zal kunnen worden gevonden. Dit idee over de manier waarop aan wetenschap moet worden gedaan, is revolutionair in de wetenschappelijke evolutie. V\'o\'or Galilei stelde men zich namelijk nadat men zich via bepaalde argumenten had laten overtuigen, geen verdere vragen over de waarheid van idee\"en. 
 	\end{oplossing}
+	\end{question}
 	
-	\item Waarin verschilt Galilei's traagheidsbegrip van het moderne?
+    \begin{question}  Waarin verschilt Galilei's traagheidsbegrip van het moderne?
 	\begin{oplossing}
-	\newline
-	Galilei's traageheidsbegrip verschilt in enkele opzichten van het moderne zoals we dat kennen onder de vorm van de eerste wet van Newton. Ten eerste is bij Galilei deze wetmatigheid gebonden aan de aardse context. Het op een rechte lijn bewegen is voor Galilei het bewegen op een cirkelvormige lijn die als middelpunt het middelpunt van de aarde heeft. Dit blijkt uit de zin die Salviati zegt op pagina 36: '\emph{Een vlak dat dus niet afhelt of stijgt, moet dus in al zijn delen even ver verwijderd zijn van het middelpunt.}' Ten tweede spreekt Galilei nog niet over het strakker omlijnde en abstracte begrip \emph{kracht} dat een beweging zal tegenwerken. Het gaat hier over \emph{toevallige en uitwendige hindernissen} zoals bijvoorbeeld een ruw oppervlak of vergankelijkheid. Als laatste heeft het traagheidsbegrip nog geen axiomatisch statuut bij Galilei. Voor Galilei is de traagheid een wetmatigheid van de natuur die zonder meer juist en waar is. Voor ons is het traagheidsbegrip een \emph{beginsel dat we aannemen als waar}. Het is een basis\emph{hypothese} die we waar veronderstellen voor zolang verschijnselen ermee overeenkomen en voor zolang ze niet wordt tegengesproken door waarnemingen.
+	%%%\newline
+	Galilei's traagheidsbegrip verschilt in enkele opzichten van het moderne zoals we dat kennen onder de vorm van de eerste wet van Newton. Ten eerste is bij Galilei deze wetmatigheid gebonden aan de aardse context. Het op een rechte lijn bewegen is voor Galilei het bewegen op een cirkelvormige lijn die als middelpunt het middelpunt van de aarde heeft. Dit blijkt uit de zin die Salviati zegt op pagina 36: '\emph{Een vlak dat dus niet afhelt of stijgt, moet dus in al zijn delen even ver verwijderd zijn van het middelpunt.}' Ten tweede spreekt Galilei nog niet over het strakker omlijnde en abstracte begrip \emph{kracht} dat een beweging zal tegenwerken. Het gaat hier over \emph{toevallige en uitwendige hindernissen} zoals bijvoorbeeld een ruw oppervlak of vergankelijkheid. Als laatste heeft het traagheidsbegrip nog geen axiomatisch statuut bij Galilei. Voor Galilei is de traagheid een wetmatigheid van de natuur die zonder meer juist en waar is. Voor ons is het traagheidsbegrip een \emph{beginsel dat we aannemen als waar}. Het is een basis\emph{hypothese} die we waar veronderstellen voor zolang verschijnselen ermee overeenkomen en voor zolang ze niet wordt tegengesproken door waarnemingen.
 	\end{oplossing}
+	\end{question}
 	
-	\item Galilei voert hier twee nieuwe analyse-technieken in: (1) redeneren vanuit een `ideaal' geval, dat in de werkelijkheid niet voorkomt; (2) de `continu\"iteit' van de natuurwetten, zodat men uit de studie van bekende verschijnselen iets kan afleiden van niet onderzochte gevallen. Duid deze twee technieken aan in Galilei's betoog.
+    \begin{question}  Galilei voert hier twee nieuwe analyse-technieken in: (1) redeneren vanuit een `ideaal' geval, dat in de werkelijkheid niet voorkomt; (2) de `continu\"iteit' van de natuurwetten, zodat men uit de studie van bekende verschijnselen iets kan afleiden van niet onderzochte gevallen. Duid deze twee technieken aan in Galilei's betoog.
 	\begin{oplossing}
-	\newline
+	%%%\newline
 	De eerste analyse-techniek vinden we terug in de redeneringen over een kogel die volkomen rond is en een oppervlak dat perfect glad en oneindig lang is (p35 bovenaan). Zo worden immers de in de realiteit aanwezige hindernissen als niet-bestaande verondersteld.
-	\newline
+	%%%\newline
 	De tweede analyse-techniek vinden we terug waar de conclusies van de redeneringen over de kogel en hellende vlakken worden toegepast op een vallende steen langs de mast van een schip (p36; '\emph{Nu, wat betreft de steen in de top van de mast. \ldots}') en vervolgens op een steen die van een toren valt (begin van de dialoog).
 	\end{oplossing}
+	\end{question}
 	
-	\item Waarop steunt Descartes' bewijs van de wet van de traagheid. Waarin is het beter dan dat van
+    \begin{question}  Waarop steunt Descartes' bewijs van de wet van de traagheid. Waarin is het beter dan dat van
 	Galilei, waar is het minder goed?
 	\begin{oplossing}
-	\newline
+	%%%\newline
 	De waarheid van de wetmatigheid steunt op het feit dat God niet aan verandering onderhevig is, dat Hij altijd op dezelfde manier handelt en dat (omdat God almachtig en goed is en ons dus juiste redeneringen moet kunnen laten maken) wij door helder te redeneren de wetmatigheden die God in de natuur heeft gelegd, kunnen vinden.
-	\newline
+	%%%\newline
 	Bij Descartes gaat het niet langer over een cirkelvormige beweging maar over een rechtlijnige beweging. De wetmatigheid is zodoende niet meer verbonden met de aarde maar algemeen geldig. Hij beschouwt het ook als een wetmatigheid die de oorzaak is van de verschillende bewegingen. De wetmatigheid krijgt meer een verklarend principe. De toevoeging van het verzetten van lichamen tegen het samenkomen en van elkaar loskomen is minder goed omdat het een bijkomende wet suggereert.
 	\end{oplossing}
+	\end{question}
 	
-	\item Hoe beoordeelt Descartes de zintuiglijke waarneming met betrekking tot zekere en ware
+    \begin{question}  Hoe beoordeelt Descartes de zintuiglijke waarneming met betrekking tot zekere en ware
 	kennis?
 	\begin{oplossing}
-	\newline
+	%%%\newline
 	Voor Descartes kunnen de zintuigen ons bedriegen. Doordat we immers verschillende keren hebben waargenomen dat voorwerpen tot stilstand komen, concluderen we valselijk dat voorwerpen dit uit zichzelf doen. Het is dus maar door zuiver te redeneren (en enkel door te redeneren) dat we tot de waarheid kunnen komen.
 	\end{oplossing}
+	\end{question}
 	
-	\item Vergelijk de formulering van Huygens en Newton.
-	
-	\item Wat is er van de \textit{vis insita} geworden in de huidige natuurkunde?
-	
-	\item Vergelijk de voorbeelden die Galilei, Descartes, Huygens en Newton geven om het traagheidsbeginsel te onderbouwen. Welke zijn het beste gekozen?
-	\item Vergelijk de aanpak van Galilei, Descartes, Huygens en Newton.
-	\end{enumerate}
-	
+    \begin{question}  Vergelijk de formulering van Huygens en Newton.
+	\end{question}
+    
+	\begin{question}  Wat is er van de \textit{vis insita} geworden in de huidige natuurkunde?
+	\end{question}
+    
+	\begin{question}  Vergelijk de voorbeelden die Galilei, Descartes, Huygens en Newton geven om het traagheidsbeginsel te onderbouwen. Welke zijn het beste gekozen?
+	\end{question}
+    
+	\begin{question}  Vergelijk de aanpak van Galilei, Descartes, Huygens en Newton.
+	\end{question}
+	\end{exercise}
 	\clearpage
-	\newpage
+	%%\newpage
 	
 	
 
