--- a/lambregs_ximera/nwtn_oplossingsstrategie.tex
+++ b/lambregs_ximera/nwtn_oplossingsstrategie.tex
@@ -32,12 +32,12 @@
 	\item Los het stelsel vergelijkingen op.
 	\end{enumerate}
 	
-	\newpage
+	%%\newpage
 	
 	\voorbeeld{}{\textsf{
 	\begin{enumerate}
 	\item[Opgave] Twee massa's $m_1$ en $m_2$ zijn via een touwtje en een katrol van te verwaarlozen massa met elkaar verbonden zoals in de figuur. Er is geen wrijving aanwezig. De massa's hebben een versnelling zoals aangegeven.
-	\newline
+	%%%\newline
 	Bepaal de grootte van de versnelling van beide massa's en de grootte van de spankracht in het touw.
 	\begin{figure}[h]
 	\begin{center}
@@ -72,7 +72,7 @@
 	}}
 	
 	
-	\newpage
+	%%\newpage
 	
 
 \end{document}
