--- a/lambregs_ximera/nwtn_traagheid.tex
+++ b/lambregs_ximera/nwtn_traagheid.tex
@@ -10,7 +10,7 @@
 
 	Het onderdeel binnen de mechanica dat zich met het verklarende principe bezighoudt, is de dynamica. Tot nu toe hebben we in de kinematica enkel bewegingen beschreven. We willen die bewegingen nu ook fysisch verklaren. De drie beginselen van Newton vormen, samen met enkele krachten, de fundamenten waarop de klassieke mechanica is gebouwd. 
 
-	\newpage
+	%%\newpage
 	
 	
 
@@ -26,7 +26,7 @@
 	\end{figure}
 	
 	De figuur ademt de onvermijdelijke wet van de traagheid uit \ldots
-	\newline
+	%%%\newline
 	\kader{
 	\vspace{1mm}
 	{\textbf{De wet van de traagheid}}
@@ -72,15 +72,15 @@
 	
 	\voorbeeld{}{\textsf{
 	Wanneer je met de fiets fietst, rechtdoor en met een constante snelheid, is de kracht die je voorwaarts uitoefent dan groter, kleiner of gelijk aan de weerstandskracht die achterwaarts is gericht? Is met andere woorden de resulterende kracht op jouw fiets naar voren gericht, nul of naar achteren gericht? 
-	\newline
-	\newline Het antwoord is dat de resulterende kracht is nul is! Moest er immers een resulterende kracht zijn, dan zou volgens de wet van de traagheid de toestand van eenparige rechtlijnige beweging niet kunnen worden behouden. 
+	%%%\newline
+	%%%\newline Het antwoord is dat de resulterende kracht is nul is! Moest er immers een resulterende kracht zijn, dan zou volgens de wet van de traagheid de toestand van eenparige rechtlijnige beweging niet kunnen worden behouden. 
 	Eenmaal in beweging, is er geen kracht meer nodig om de beweging te onderhouden. Je moet blijven trappen om een even grote kracht als de weerstandskracht te kunnen genereren. Natuurlijk, om in beweging te komen, heb je wel een netto kracht naar voor toe nodig. Bij het remmen is de resulterende kracht dan weer naar achteren gericht.
 	}}
 	
 	%\vfill
 	
 	
-	%\newpage
+	%%%\newpage
 	
 	
 	
