--- a/preamble.tex
+++ b/preamble.tex
@@ -1231,7 +1231,7 @@
 %\theoremstyle{remark}\newtheorem*{bewijs}{Bewijs}
 
 % Om de oplossingen te tonen: comment out de \excludecomment
-\specialcomment{oplossing}{\begingroup\color{blue}}{\endgroup}
-\excludecomment{oplossing}
+% \specialcomment{oplossing}{\begingroup\color{blue}}{\endgroup}
+% \excludecomment{oplossing}
 
 %\includeonly{F_Files/voorblad, F_Files/inhoudspagina,F_Files/inleiding,F_Files/eendimensionalebewegingen,F_Files/oefeningen_1d}
