--- a/lambregs_ximera/glvn_golven_kenmerken.tex
+++ b/lambregs_ximera/glvn_golven_kenmerken.tex
@@ -11,9 +11,9 @@
 	%% \chapter{Golven}
 
 	Als je een steentje in een poel gooit, krijg je van die prachtige uitdijende cirkels in het wateroppervlak, die, al naargelang ze groter worden, ook in zichtbaarheid afnemen en meer en meer verdwijnen. De verstoring die door de steen in het wateroppervlak teweeg is gebracht, plant zich voort in het water. We hebben te maken met een golf.
-	\newline
+	%%%\newline
 	Een bijzondere eigenschap van de golf die in het wateroppervlak ontstaat is dat het de verstoring in het medium is die zich verplaatst, niet het water zelf. Het water blijft ter plaatse. Zo zal een dobber van een vislijn enkel op en neer bewegen wanneer een golf voorbijkomt. Ook bij een Mexican wave is dit duidelijk; het zijn niet de supporters die rondlopen!
-	\newline
+	%%%\newline
 	Golven hebben echter niet altijd een medium nodig om zich in voort te planten. Denk maar aan licht of in het algemeen aan een elektromagnetische golf. De wisselende elektrische en magnetische velden vormen hier de golf.
 	
 	%een golf heeft een trilling als bron. Als de bron een harmonische trilling uitvoert, ontstaat een golf die zowel in de ruimte als in de tijd sinuso\"idaal is.
@@ -28,8 +28,8 @@
 	\includegraphics[width=0.7\textwidth]{elasticiteit_medium}
 	\caption{\textit{Een golfpuls die zich voortplant in een touw. De pijlen geven de snelheid van deeltjes in het touw weer.}}
 	\end{figure}
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	Golven kunnen \emph{transversaal} of \emph{longitudinaal} zijn. Bij een transversale golf gebeurt de beweging van de deeltjes van het medium loodrecht op de voortplantingsrichting van de golf. Zo krijg je transversale golven wanneer je het uiteinde van een touw heen en weer slingert. Ook licht is een transversale golf. Hier trilt dus niet het medium maar is het de ori\"entatie van de elektrische of magnetische veldvector die loodrecht staat op de voortplantingsrichting. Bij een longitudinale golf bewegen de deeltjes van het medium in de richting evenwijdig met de voortplantingsrichting. P-golven bij een aardbeving zijn hiervan een voorbeeld (i.t.t. S-golven, die zijn transversaal). Ook geluid bestaat uit een longitudinale golf. Zo plant geluid zich in de lucht voort doordat de luchtmoleculen tegen elkaar botsen. 
 	Er zijn nog andere soorten golven zoals \emph{oppervlaktegolven}, \emph{tweedimensionale} en \emph{driedimensionale} golven. Deze zullen we hier met momenten kort behandelen.
 	\begin{figure}[h]
@@ -37,19 +37,19 @@
 	\includegraphics[width=0.9\textwidth]{longitudinaal_veer}
 	\caption{\textit{Een longitudinale golf in een opgegespannen veer. De verplaatsingen van de spiralen zijn in de richting van de zich voortplantende golf. Elke samendrukking wordt gevolgd door een uitrekking.}}
 	\end{figure}
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	Als een de bron van een golf voortdurend blijft trillen, spreken we van een \emph{continue golf} of lopende golf. Als je slechts een enkele verstoring hebt die zich voortplant, spreken we van een \emph{puls}. We zullen hier in de regel over continue golven spreken.
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	Om een golf te kunnen beschrijven, hebben we een paar karakteristieke grootheden. Zo kunnen we bij een continue golf spreken over de \emph{golflengte}. De golflengte $\lambda$ van een golf is de kortste afstand tussen twee punten die in fase trillen. Deze is gemakkelijk terug te vinden als de afstand van top tot top\footnote{In de ruimtelijke voorstelling van de golf kan je over golftoppen, -pieken of -kammen spreken tegenover golfdalen. Voor een longitudinale golf spreken we over samendrukkingen of verdichtingen versus uitrekkingen of verdunningen.}. De golflengte is dus de periode voor de golf in de ruimte zoals de `periode' $T$ de periode is van een trilling in de tijd. Voor een continue golf is de \emph{periode} de tijd die een deeltje nodig heeft om een volledige trilling te doorlopen. Omdat dit evenzeer de tijd is die de storing nodig heeft om de golflengte af te leggen, hebben we de volgende eenvoudige maar belangrijke formule voor de snelheid waarmee de golf zich voortplant -- de \emph{golfsnelheid} of fasesnelheid:
 	\begin{equation*}
 	v=\frac{\lambda}{T}=\lambda\cdot f
 	\end{equation*}
 	%De eenheid van golflengte is dan ook de meter, daar waar die voor de periode de seconde is.
 	In de regel zullen we golven behandelen waarvoor de snelheid onafhankelijk is van de frequentie of golflente van de golf.\footnote{Is de snelheid wel afhankelijk van de frequentie, dan spreken we over dispersie. Dit verschijnsel doet zich onder andere voor bij licht dat door een prisma gaat. De snelheid voor verschillende kleuren en dus frequenties is verschillend waardoor je een regenboogeffect krijgt. De snelheid bepaalt immers de mate van breking.} In dat geval zijn golflengte en frequentie dus omgekeerd evenredig.
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	Voor een golf kan je naast de golfsnelheid nog een andere snelheid beschouwen. De deeltjes van het medium kunnen namelijk harmonisch trillen zodat hun snelheidsverloop helemaal verschillend is van de constante golfsnelheid waarmee de storing zich voortplant. De onderstaande figuur verduidelijkt dit.
 	\begin{figure}[h]
 	\centering
