--- a/lambregs_ximera/glvn_periodieke_golven.tex
+++ b/lambregs_ximera/glvn_periodieke_golven.tex
@@ -11,8 +11,8 @@
 	\section{Periodieke golven}
 
 	Zoals we de positie van een voorwerp konden beschrijven met een functie $x(t)$, willen we ook een golf m.b.v. een functie kunnen beschrijven. Omdat een golf niet te lokaliseren is in een punt maar zich uitstrekt over de hele ruimte en daarnaast in de tijd evolueert, hebben we een iets uitgebreidere functie nodig. De uitwijking $y$ van het medium is zowel afhankelijk van de plaats $x$ waarop je kijkt als het moment $t$ dat je interesseert. De oplossing bestaat erin een functie in twee variabelen te gebruiken. 
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	We beschouwen een sinuso\"idale golf die naar rechts beweegt -- volgens de $x$-as. Om een wiskundige beschrijving van een golf te vinden, bekijken we twee momentopnames op willekeurige tijdstippen. Voor het gemak nemen we als eerste tijdstip $t=0$ en noemen we het tweede tijdstip $t$. In de tijdsspanne $t$ is de golf $vt$ eenheden naar rechts opgeschoven, zie figuur (\ref{afleiding_golfvergelijking}). $v$ is uiteraard de golfsnelheid.
 	
 	\begin{figure}[!h]
@@ -45,8 +45,8 @@
 	y=A\sin(kx)\qquad\mathrm{met}\qquad k=\frac{2\pi}{\lambda}
 	\end{eqnarray*}
 	Het symbool $k$ noemen we het \emph{golfgetal}.\footnote{De $k$ is eigenlijk niets anders dan de `$b$' zoals je die kent in de algemene sinusfunctie $f(x)=a\sin(b(x-c))$+d. $b=\frac{2\pi}{p}$ met $p$ de periode. In deze context is de periode de golflengte $\lambda$, uitgedrukt in meters.} \footnote{De $k$ heeft niets te maken met de veerconstante. Het is niet omdat Jantje Jantje heet en Jantje Jantje, dat Jantje en Jantje dezelfde personen zijn. Jantje en Jantje kunnen bijvoorbeeld -- al is het onwaarschijnlijk -- broers zijn.}
-	\newline
-	\newline
+	%%%\newline
+	%%%\newline
 	Een tijd $t$ later is de verschijningsvorm van de golf een afstand $vt$ (de afstand die een top gedurende de tijd $t$ heeft afgelegd) naar rechts opgeschoven. De vergelijking vinden we dan door een overeenkomstige verschuiving door te voeren:
 	\begin{eqnarray*}
 	y&=&A\sin(k(x-vt))\\
@@ -74,7 +74,7 @@
 	Het is alsof we een foto trekken van de golf.
 	
 	
-	\newpage
+	%%\newpage
 	
 	%\section{Verschijnselen}
 	%
