--- a/preamble.tex
+++ b/preamble.tex
@@ -1205,6 +1205,8 @@
 
 % ----------------------------------------------------------------LAMBREGS
 
+\usepackage{siunitx}
+\sisetup{locale = FR, exponent-product = \cdot}
 
 
 \newcommand{\kader}[1]{\framebox{\begin{minipage}[t]{0.98\textwidth}#1\end{minipage}}}
